# pet-annotation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.in
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-15-pet-annotation-impl.md
docs/superpowers/specs/: 2026-04-15-pet-annotation-design.md
migrations/: 001_create_annotation_tables.sql  002_add_modality.sql  003_create_audio_annotations.sql  004_four_paradigm_tables.sql  005_add_annotation_targets.sql
scripts/: reset_db.sh
src/pet_annotation/: __init__.py  __main__.py  _register.py  _version_pins.py  adapter.py  cli.py  config.py  store.py
src/pet_annotation/classifiers/: __init__.py  base.py
src/pet_annotation/configs/dataset/: audio_annotations.yaml  classifier_annotations.yaml  human_annotations.yaml  (+3 more)
src/pet_annotation/datasets/: audio_annotations.py  classifier_annotations.py  human_annotations.py  llm_annotations.py  rule_annotations.py  vision_annotations.py
src/pet_annotation/dpo/: generate_pairs.py  import_app_feedback.py  validate_pairs.py
src/pet_annotation/export/: sft_dpo.py  to_audio_labels.py  to_dpo_pairs.py  to_sharegpt.py
src/pet_annotation/human_review/: export_from_ls.py  import_to_ls.py  ls_auth.py  ls_client.py
src/pet_annotation/quality/: auto_check.py  llm_judge.py  sampling.py
src/pet_annotation/rules/: __init__.py  base.py
src/pet_annotation/teacher/: cost_tracker.py  orchestrator.py  provider.py  rate_tracker.py
tests/: conftest.py  test_adapter.py  test_adapter_routing.py  test_auto_check.py  test_classifier_base.py  test_cli.py  test_cli_annotator_dispatch.py  test_config.py  test_cost_tracker.py  test_datasets_plugins.py  test_dpo_modality.py  test_e2e_integration.py  test_export.py  test_export_audio.py  test_export_sft_dpo.py  test_extra_payload.py  test_four_paradigm_tables.py  test_generate_pairs.py  test_hydra_configs.py  test_import_to_ls.py  test_llm_judge.py  test_migration_005.py  test_migrations.py  test_orchestrator.py  test_orchestrator_human.py  test_orchestrator_integration.py  test_peer_dep_fail_fast.py  test_peer_dep_guards.py  test_plugin_keys.py  test_plugin_registration.py  test_provider.py  test_rate_tracker.py  test_registry.py  test_rule_base.py  test_sampling.py  test_storage_uri_resolution.py  test_store.py  test_store_audio.py  test_store_targets.py  test_templates.py  (+2 more)
(+7 files in other folders)
