[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-annotation"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pet-schema @ git+https://github.com/Train-Pet-Pipeline/pet-schema.git@v1.0.0",
    "aiohttp>=3.9,<4.0",
    "tenacity>=8.0,<9.0",
    "click>=8.0,<9.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "label-studio-sdk>=1.0,<2.0",
    "dvc>=3.40,<4.0",
    "python-json-logger>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "aioresponses>=0.7", "ruff", "mypy", "pip-tools"]

[project.scripts]
pet-annotation = "pet_annotation.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
