[build-system]
requires = [
    "setuptools>=68.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pet-annotation"
version = "1.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pet-schema @ git+https://github.com/Train-Pet-Pipeline/pet-schema.git@v2.0.0",
    "aiohttp>=3.9,<4.0",
    "click>=8.0,<9.0",
    "dvc>=3.40,<4.0",
    "hydra-core>=1.3,<1.4",
    "label-studio-sdk>=1.0,<2.0",
    "mmengine-lite>=0.10,<0.12",
    "pet-infra @ git+https://github.com/Train-Pet-Pipeline/pet-infra.git@v2.0.0",
    "pydantic>=2.0,<3.0",
    "python-json-logger>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "tenacity>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff",
    "mypy",
    "pip-tools",
]

[project.scripts]
pet-annotation = "pet_annotation.cli:cli"

[project.entry-points."pet_infra.plugins"]
pet_annotation = "pet_annotation._register:register_all"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
